2010-05-03  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘struct link’ more.

	* rlog.c (struct rcslockers): Delete.
	(struct stateattri, struct authors): Likewise.
	(authorlist, lockerlist, statelist): Change type to ‘struct link *’.
	(getlocker, getauthor, getstate): Use ‘extend’.
	(extractdelta, trunclocks): Update to walk ‘struct link *’ list.
	* rcs.c (struct Lockrev): Delete.
	(newlocklst, rmvlocklst): Change type to ‘struct link *’.
	(rmnewlocklst): Return ‘struct link *’.
	(dolocks): Update to walk ‘struct link *’ list.
	(main): Use ‘extend’.

2010-05-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘bool’ more.

	* base.h (struct hshentry): Change type of member ‘selector’ to bool.

2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Freeze RCS file syntax; drop ‘newphrase’ support.

	* base.h (struct hshentry): Delete members ‘ig’, ‘igtext’.
	(struct parse_state): Delete member ‘ignore’.
	(struct repository): Delete member ‘description’.
	(warnignore, getphrases, ignorephrases): Delete func decls.
	* ci.c (main): Don't init ‘newdelta.ig’, ‘newdelta.igtext’.
	* rcs.c (scanlogtext): Expect ‘text’ after ‘log’.
	* rcsfnms.c (InitAdmin): Don't init ‘ADMIN (description)’.
	* rcsgen.c (scandeltatext): Expect ‘text’ after ‘log’.
	(putadmin): Don't bother w/ ‘ADMIN (description)’ output.
	(putdelta, putdftext): Don't bother w/ "ignored phrases" output.
	* rcslex.c (warnignore): Delete func.
	(Lexinit): Don't bother w/ ‘LEX (ignore)’ init.
	(getphrases): Delete func.
	* rcssyn.c (getadmin): Don't init ‘ADMIN (description)’.
	(ignorephrases): Delete func.
	(getdelta): Don't bother lookng for "ignorable phrases".
	* rlog.c (readdeltalog): Expect ‘text’ after ‘log’.

2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Clean up base.h; nfc.

	* base.h: Reorder top-level forms;
	add variable names to func decls.
	(expand_names): Delete now-unused var decl.

2010-04-30  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: format_assocs
